# rail-stations

./: .gitignore  README.md  main.py  pyproject.toml
data/: A.html  B.html  C.html  D.html  E.html  F.html  G.html  H.html  I.html  J.html  K.html  L.html  M.html  N.html  O.html  P.html  Q.html  R.html  S.html  T.html  U.html  V.html  W.html  Y.html
python/src/: extract_wiki.py  postcode.py  station.py
python/test/: test_extract_wiki.py  test_postcode.py  test_station.py
