[tool.poetry]
name = "rail-stations"
version = "0.1.0"
description = ""
authors = ["Cyrus.Tang <cyrus.tang@superoverflow.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
mypy = "^1.10.1"
types-requests = "^2.32.0.20240622"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
